# frenet_skid_mpc

./: README.md  _config.yml  index.md
clipped_skid_p2p/: package.xml  setup.cfg  setup.py
clipped_skid_p2p/clipped_skid_p2p/: clipped_skid_p2p_node.py
clipped_skid_p2p/config/: clipped_skid_p2p.yaml
datasets/frenet/S_frenet/: metadata.yaml
datasets/frenet/boxy_frenet/: metadata.yaml
datasets/frenet/straight_frenet/: metadata.yaml
dynamic_uniform_spline_publisher/: package.xml  setup.cfg  setup.py
dynamic_uniform_spline_publisher/config/: dynamic_uniform_spline_publisher.yaml
dynamic_uniform_spline_publisher/dynamic_uniform_spline_publisher/: dynamic_uniform_spline_publisher_node.py
frenet_skid_mpc/: package.xml  setup.cfg  setup.py
frenet_skid_mpc/config/: frenet_skid_mpc.yaml
frenet_skid_mpc/frenet_skid_mpc/: __init__.py
path_to_micro_waypoints/: package.xml  setup.cfg  setup.py
path_to_micro_waypoints/config/: path_to_micro_waypoints.yaml
path_to_micro_waypoints/path_to_micro_waypoints/: path_to_micro_waypoints_node.py
pure_pursuit_baseline/: package.xml  setup.cfg  setup.py
pure_pursuit_baseline/config/: pure_pursuit.yaml
pure_pursuit_baseline/pure_pursuit_baseline/: pure_pursuit_node.py
pure_skid_p2p/: package.xml  setup.cfg  setup.py
pure_skid_p2p/config/: pure_skid_p2p.yaml
pure_skid_p2p/launch/: pure_skid_p2p.launch.py
pure_skid_p2p/pure_skid_p2p/: pure_skid_p2p_node.py
torque_supervisor/: package.xml  setup.cfg  setup.py
torque_supervisor/config/: config.yaml
torque_supervisor/launch/: torque_supervisor.launch.py
torque_supervisor/torque_supervisor/: torque_supervisor_node.py
(+3 files in other folders)
