<?xml version="1.0"?>
<package format="3">
  <name>torque_supervisor</name>
  <version>0.0.0</version>
  <description>Model-based cmd_vel supervisor with torque estimation and saturation prevention.</description>

  <maintainer email="krecht.rudolf@ga.sze.hu">Rudolf Krecht</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
